<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#FF0B173B" >

    <LinearLayout

        android:id="@+id/linear"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center" >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="#FFFFFFFF"
            android:text="@string/app_name" />

        <TextView

            android:id="@+id/btn_lock"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/tv"
            android:layout_centerHorizontal="true"
            android:onClick="onLock"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="#FFFFFFFF"
            android:text="@string/lock_mode"
            android:background="@drawable/bg_btn"
            android:visibility="gone" />

        <ImageView

            android:id="@+id/iv_lock"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/tv"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_lock"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:visibility="gone" >

        <EditText

            android:id="@+id/et"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/input_id"
            android:textColorHint="#FFA4A4A4"
            android:textSize="14sp"
            android:textColor="#FFF2F2F2"
            android:background="@drawable/bg_input" />

        <EditText

            android:id="@+id/et_phone"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/input_phone"
            android:textColorHint="#FFA4A4A4"
            android:textSize="14sp"
            android:textColor="#FFF2F2F2"
            android:background="@drawable/bg_input" />

        <TextView

            android:id="@+id/btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="#FFFFFFFF"
            android:text="@string/login"
            android:background="@drawable/bg_btn" />

    </LinearLayout>

    <TextView

        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="12sp"
        android:textColor="#FFFFFFFF" />

</RelativeLayout>